[package]
name = "timeular"
version = "0.1.0"
authors = ["William Cybriwsky <william.cybriwsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
clap = "2.33.3"
regex = "1"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
